--- a/vignettes/emr.Rmd
+++ b/vignettes/emr.Rmd
@@ -20,7 +20,7 @@ DxDataFile <- data.frame(ID = c("A", "A", "B", "B"),
                          Date = as.Date(c("2013-03-31", "2013-01-29", "2016-03-10", "2016-03-10")),
                          stringsAsFactors = FALSE)
 ```
-# Introduction
+# I. Introduction
 ```
 cat(utils::packageDescription("emr")$Description)
 ```
@@ -70,13 +70,13 @@ IcdDxDecimaltoShort(icd9_Decimal)$Short
 IcdDxDecimaltoShort(icd10_Decimal)$Short
 # c("A150", "A154", "A155", "A156", "A157", "A158", "A159", "A170", "A171", "A1781")
 ```
-## Grouping ICD-CM codes by ...
+## II. Grouping ICD-CM codes by ...
 Grouping ICD-9 and ICD-10 codes by: Classifying ICD-9-CM and ICD-10-CM diagnoses codes into clinically meaningful categories, which can be used for aggregate statistical reporting of a variety of types.
 
-### Clinical Classifications Software (CCS)
+### A. Clinical Classifications Software (CCS)
 It is based on the CCS for ICD-9-CM and attempts to map ICD-10-CM/PCS codes into the same categories. and get the CCS categories and description by ICD-9/ICD-10 code.
 
-#### CCS single-level category
+#### a. CCS single-level category
 `IcdDxToCCS` can get CCS categories or description for ICD-9 and ICD-10 codes on diagnoses.
 
 ICD-9-CM and ICD-10-CM code contains same 260 CCS categories.
@@ -98,7 +98,7 @@ If CCS return `NA`, there are two ways of `warning message`: The ICD mentioned a
 
 for example, `42577` is wrong format of ICD-9-CM code, will show `wrong format` message.
 
-#### CCS multi-level
+#### b. CCS multi-level
 `IcdDxToCCSLvl` can get CCS multiple levels or description for ICD-9 and ICD-10 codes on diagnoses.
 
 ICD-9-CM has four levels
@@ -121,7 +121,7 @@ for example,
 
 2) `42577` is wrong format of ICD-9-CM code, will show `wrong format` message, ICD-10-CM show `Warning ICD` (cause ICD-10-CM ccs multiple levels are 1~2) 
 
-### Phecode
+### B. Phecode
 `IcdDxToPhecode` allows  for conversion and aggregate ICD9 codes into PheWAS codes (Phecode).
 
 This can be used to group Phecode or description of phecode (phenotype) by ICD-9 diagnosis codes in clinical diagnostic data.
@@ -134,14 +134,13 @@ IcdDxToPhecode(DxDataFile, ID, ICD, Date, "2016-01-01", FALSE)
 ```
 If Phecode return `NA`, there are two ways of `warning message`: The ICD mentioned above matches to "NA" due to the format, the ICD classify to wrong ICD version (phecode does not have icd10) or other issues.
 
-### Creating a grouping standards
+### C. Creating a grouping standards
 User can identify the rule of grouping standards, and return matched ICD codes.
 For example, there is  a ICD data frame `icdFile` whether is matched these group: Hypotension and Hypertension or not.
 ```
 icdFile <- data.frame(ICD = c("I95.0", "I952", "I110", "01091"), stringsAsFactors = FALSE)
 ```
-
- 1) `IcdDxToCustom`: Use method of exhaustion to find out the matched ICD.
+#### a. `IcdDxToCustom`: Use method of exhaustion to find out the matched ICD.
 ```{r}
 # groupingTable 
 data.frame(Group = c("Hypotension","Hypotension","Hypotension", "Hypertension", "Hypertension"),
@@ -152,7 +151,7 @@ data.frame(Group = c("Hypotension","Hypotension","Hypotension", "Hypertension", 
 IcdDxToCustom(icdFile, groupingTable)
 #  "Hypotension"  "Hypotension"  "Hypertension" NA 
 ```
- 2) `IcdDxToCustomGrep`: Use a ICD pattern to find out the fit ICD.
+#### b. `IcdDxToCustomGrep`: Use a ICD pattern to find out the fit ICD.
 ```{r}
 # grepTable
 data.frame(Group = c("Hypotension", "Hypertension"),
@@ -164,10 +163,10 @@ IcdDxToCustomGrep(icdFile, grepTable)
 # "Hypotension"  "Hypotension"  "Hypertension" NA  
 ```
 
-### Comorbidities
+### D. Comorbidities
 The comorbidities measures from different sources are provided as lists. There are three comorbidities sources: AHRQ, Charlson, and Elixhauser Comorbidity.
 
-#### AHRQ comorbidity classification
+#### a. AHRQ comorbidity classification
 AHRQ comorbidity measure dataframe is based on `icd package`, the names of the comorbidities derived from ICD-9 and ICD-10 codes are the same.
 The AHRQ comorbidity measure map format is dataframe;it is convert `icd9_map_ahrq` list into `icd9_ahrq` dataframe.The functions apply those mappings to join with user's ICD data.
 
@@ -184,7 +183,7 @@ icd10_ahrq$Comorbidity %>% unique
 ```
 IcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", ahrq, N, TRUE)
 ```
-#### Charlson comorbidity classification
+#### b. Charlson comorbidity classification
 Charlson comorbidity measure dataframe is based on `icd package`: icd9_map_charlson, icd10_map_charlson
 
  ICD-9
@@ -201,7 +200,7 @@ icd10_charlson$Comorbidity %>% unique
 ```
 IcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", charlson, B, TRUE)
 ```
-#### Elixhauser comorbidity classification
+#### c. Elixhauser comorbidity classification
 Elixhauser comorbidity measure data.
 
 The Elixhauser Comorbidity Software is one in a family of databases and software tools developed as part of the Healthcare Cost and Utilization Project (HCUP).
@@ -217,7 +216,7 @@ icd10_elix$Comorbidity %>% unique
 ```
 IcdDxToComorbid(DxDataFile, ID, ICD, Date, "2016-01-01", elix, N, TRUE)
 ```
-## Selection Cases
+## III. Selection Cases
 This can be used to select qualified cases from factIcd data based on the ICD code searching criteria and number of ICD code per patients in the inout factIcd dataset.
 
 searching criteria for example, 
@@ -237,7 +236,7 @@ selectCases_Example <- data.frame(ID = c("A", "A", "A", "A"),
                          stringsAsFactors = FALSE)
 selectCases("^I0", selectCasesDx_Example, ID, ICD, Date, "2016-01-01", 2)
 ```
-## Condition Era
+## IV. Condition Era
 Get the condition era
 
 Condition Eras are built with a Persistence Window, deafault is 30 days.
@@ -245,7 +244,7 @@ Condition Eras are built with a Persistence Window, deafault is 30 days.
 getConditionEra(DxDataFile, ID, ICD, Date, "2016-01-01", 30, ccs, FALSE)
 getConditionEra(DxDataFile, ID, ICD, Date, "2016-01-01", 30, ICD, FALSE)
 ```
-# Reference
+# V. Reference
 ### ICD format: Short and Decimal
 
 https://www.findacode.com/search/search.php
